--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -10,13 +10,19 @@
                         <input id="termInput" type="text" class="_width100" value.bind="term & debounce" focus="true" placeholder="Coli Neko..." />
                     </div>
                 </div>
-                <div class="col m6">
+                <div class="col m5">
                     <div class="form-group" if.bind="!stageLocked">
                         <label for="stageInput">Stage</label>
                         <stage-display id="stageInput" editable="true" stage-id.two-way="stageId"></stage-display>
                     </div>
                 </div>
-                <div class="col m6">
+                <div class="col m4">
+                    <div class="form-group" if.bind="!invasionLocked">
+                        <label for="invasionInput">Invasion</label>
+                        <stage-display id="invasionInput" editable="true" stage-id.two-way="invasionId" invasion="true"></stage-display>
+                    </div>
+                </div>
+                <div class="col m3">
                     <div class="form-group" if.bind="!userLocked">
                         <label for="userInput">User Name</label>
                         <input id="userInput" type="text" class="_width100" value.bind="submittedBy & debounce" placeholder="Luffy..." />
