--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
@@ -7,7 +7,7 @@
             <h3>Select a Stage</h3>
         </ux-dialog-header>
         <ux-dialog-body>
-            <stage-search search-model.two-way="searchModel"></stage-search>
+            <stage-search search-model.two-way="searchModel" type-locked.bind="invasion" term-locked.bind="invasion"></stage-search>
             <loading-area if.bind="loading"></loading-area>
             <div if.bind="!loading">
                 <div class="row">
@@ -18,6 +18,7 @@
                         <li repeat.for="stage of stages" class="${(stageId === stage.id ? 'active' : '')}">
                             <a href="#" click.delegate="clicked(stage.id)">
                                 <global-display global.bind="stage.global"></global-display>
+                                <unit-display unit-id.bind="stage.unitId" size="small" if.bind="stage.unitId"></unit-display>
                                 ${stage.name}
                                 <stage-type-display type.bind="stage.type" class="_floatRight"></stage-type-display>
                             </a>
