--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
@@ -20,7 +20,8 @@
                                 <global-display global.bind="stage.global"></global-display>
                                 <unit-display unit-id.bind="stage.unitId" size="small" if.bind="stage.unitId"></unit-display>
                                 ${stage.name}
-                                <stage-type-display type.bind="stage.type" class="_floatRight"></stage-type-display>
+                                (${stage.teamCount})
+                                <stage-type-display class="_floatRight" type.bind="stage.type"></stage-type-display>
                             </a>
                         </li>
                     </ul>
