--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-flags-dialog.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-flags-dialog.html
@@ -23,6 +23,7 @@
                             <div class="unit-flag-container">
                                 <div class="row">
                                     <unit-display model.bind="unit"
+                                                  tooltip="true"
                                                   size="large">
                                     </unit-display>
                                 </div>
