--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/box-units-dialog.html
@@ -23,6 +23,7 @@
                             <unit-display repeat.for="unit of units"
                                           model.bind="unit"
                                           show-box="true"
+                                          tooltip="true"
                                           box.bind="box"
                                           selected.delegate="toggle($event)"
                                           size="medium">
