--- a/Source/TreasureGuide.Web/src/custom-elements/team-inline.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-inline.html
@@ -1,7 +1,7 @@
 ﻿<template>
     <unit-display repeat.for="slot of slots"
                   model.bind="slot"
-                  tooltip="false"
+                  tooltip="true"
                   show-box="true">
     </unit-display>
 </template>
