--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -37,6 +37,7 @@
                             <label for="unitInput">Captain</label>
                             <unit-display id="unitInput"
                                           size="large"
+                                          tooltip="true"
                                           unit-id.two-way="leaderId"
                                           editable="true">
                             </unit-display>
