--- a/Source/TreasureGuide.Web/src/custom-elements/team-slot.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-slot.html
@@ -30,7 +30,7 @@
                               show-box="true">
                 </unit-display>
             </div>
-            <div class="team-unit" auth-req="BetaTester" if.bind="canAddSubs">
+            <div class="team-unit" if.bind="canAddSubs">
                 <unit-display editable="true"
                               info="true"
                               tooltip="true"
