--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -23,6 +23,7 @@
                             <div class="unit-collection">
                                 <unit-display repeat.for="unit of units"
                                               model.bind="unit"
+                                              tooltip="true"
                                               selected.delegate="eventClicked($event)"
                                               show-box="true">
                                 </unit-display>
