Fixing issues with saving drafts.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="col m2">
-                    <div class="form-group" if.bind="canDraft">
+                    <div class="form-group" auth-req>
                         <label for="draftCheckbox">
                             <input id="draftCheckbox" type="checkbox" checked.bind="draft" />
                             <span class="-label-body">Drafts</span>
