--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -13,13 +13,13 @@
                 <div class="col m5">
                     <div class="form-group" if.bind="!stageLocked">
                         <label for="stageInput">Stage</label>
-                        <stage-display id="stageInput" editable="true" stage-id.two-way="stageId"></stage-display>
+                        <stage-display id="stageInput" editable="true" stage-id.two-way="stageId" size="tiny"></stage-display>
                     </div>
                 </div>
                 <div class="col m4">
                     <div class="form-group" if.bind="!invasionLocked">
                         <label for="invasionInput">Invasion</label>
-                        <stage-display id="invasionInput" editable="true" stage-id.two-way="invasionId" invasion="true"></stage-display>
+                        <stage-display id="invasionInput" editable="true" stage-id.two-way="invasionId" invasion="true" size="tiny"></stage-display>
                     </div>
                 </div>
                 <div class="col m3">
