--- a/Source/TreasureGuide.Web/src/custom-elements/displays/schedule-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/schedule-display.html
@@ -9,7 +9,10 @@
         <schedule-bar schedule.bind="currentSchedule" global.bind="globalSchedule"></schedule-bar>
         <schedule-bar schedule.bind="upcomingSchedule" upcoming="true" global.bind="globalSchedule"></schedule-bar>
         <span class="schedule-credit">
-            Powered by <a href="https://optc-agenda.github.io/" target="_blank">OPTC-Agenda</a>
+            Powered by
+            <a href="https://optc-agenda.github.io/" target="_blank">OPTC-Agenda</a>
+            and
+            <a href="https://lukforce.bitbucket.io/optc-cal/" target="_blank">OPTC-Cal</a>
         </span>
     </div>
 </template>
