--- a/Source/TreasureGuide.Web/src/custom-elements/displays/friend-id-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/friend-id-display.html
@@ -1,4 +1,4 @@
 <template>
     <span>${display}</span>
-    <global-display global.bind="global"></global-display>
+    <i class="fa fa-fw fa-globe" if.bind="global"></i>
 </template>
