Fixing opacity on box checks.

--- a/Source/TreasureGuide.Web/src/custom-elements/unit-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-display.html
@@ -16,7 +16,7 @@
             </div>
         </button>
         <a if.bind="link" class="unit-link" href.bind="link" target="_blank"></a>
-        <a>
+        <a class="in-box">
             <input if.bind="showBoxInput" type="checkbox" checked.bind="hasUnit" title.bind="boxTitle" class="in-box" />
         </a>
         <ind-unit-flag-display if.bind="showBoxFlags" value.bind="unitBoxFlags"></ind-unit-flag-display>
