Updated team icons.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -24,7 +24,7 @@
                         Logout
                     </a>
                 </li>
-                <li class="_floatRight" auth-req="BoxUser">
+                <li class="_floatRight box-icon" auth-req="BoxUser">
                     <a route-href="route: boxes"
                        title.bind="boxTitle"
                        class.bind="boxClass">
