--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -49,7 +49,7 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div id="container" class="container">
             <router-view></router-view>
         </div>
     </main>
