Fixing several issues with enter key reloading hte page.

--- a/Source/TreasureGuide.Web/src/custom-elements/stage-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-search.html
@@ -1,5 +1,5 @@
 <template>
-    <form with.bind="searchModel">
+    <form with.bind="searchModel" onsubmit="return false;">
         <fieldset>
             <legend>Search</legend>
             <div class="row">
