--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -1,5 +1,5 @@
 <template>
-    <form with.bind="model">
+    <form with.bind="model" onsubmit="return false;">
         <fieldset>
             <legend>Search</legend>
 
