--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -12,60 +12,62 @@
                 <button type="button" class="tablinks" class.bind="generic ? '_active' : ''" click.delegate="showGeneric()">Generic Slots</button>
             </div>
             <div class="row">
-                <div if.bind="!generic">
-                    <unit-search model.two-way="searchModel"></unit-search>
-                    <loading-area if.bind="loading"></loading-area>
-                    <div if.bind="!loading">
-                        <div class="row">
-                            <search-pager search-model.bind="searchModel"></search-pager>
-                        </div>
-                        <div class="row _alignCenter">
-                            <div class="unit-collection">
-                                <unit-display repeat.for="unit of units"
-                                              model.bind="unit"
-                                              tooltip="true"
-                                              selected.delegate="eventClicked($event)"
-                                              show-box="true">
-                                </unit-display>
+                <form onSubmit="return false;">
+                    <div if.bind="!generic">
+                        <unit-search model.two-way="searchModel"></unit-search>
+                        <loading-area if.bind="loading"></loading-area>
+                        <div if.bind="!loading">
+                            <div class="row">
+                                <search-pager search-model.bind="searchModel"></search-pager>
                             </div>
-                        </div>
-                        <div class="row">
-                            <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
+                            <div class="row _alignCenter">
+                                <div class="unit-collection">
+                                    <unit-display repeat.for="unit of units"
+                                                  model.bind="unit"
+                                                  tooltip="true"
+                                                  selected.delegate="eventClicked($event)"
+                                                  show-box="true">
+                                    </unit-display>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div if.bind="generic">
-                    <fieldset>
-                        <legend>Specifications</legend>
-                        <form with.bind="genericBuilder" class="_alignCenter">
-                            <div class="form-group">
-                                <label for="typeInput">
-                                    Type
-                                </label>
-                                <unit-type-picker id="typeInput" value.two-way="type" maximum="1"></unit-type-picker>
+                    <div if.bind="generic">
+                        <fieldset>
+                            <legend>Specifications</legend>
+                            <div with.bind="genericBuilder" class="_alignCenter">
+                                <div class="form-group">
+                                    <label for="typeInput">
+                                        Type
+                                    </label>
+                                    <unit-type-picker id="typeInput" value.two-way="type" maximum="1"></unit-type-picker>
+                                </div>
+                                <div class="form-group">
+                                    <label for="classInput">
+                                        Class
+                                    </label>
+                                    <unit-class-picker id="classInput" value.two-way="class" maximum="2"></unit-class-picker>
+                                </div>
+                                <div class="form-group">
+                                    <label for="roleInput">
+                                        Role
+                                    </label>
+                                    <unit-role-picker id="roleInput" value.two-way="role" maximum="1"></unit-role-picker>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="classInput">
-                                    Class
-                                </label>
-                                <unit-class-picker id="classInput" value.two-way="class" maximum="2"></unit-class-picker>
+                        </fieldset>
+                        <fieldset>
+                            <legend>Output</legend>
+                            <div class="_alignCenter">
+                                <unit-display size="large" model.bind="genericBuilder" selected.delegate="eventClicked($event)">
+                                </unit-display>
                             </div>
-                            <div class="form-group">
-                                <label for="roleInput">
-                                    Role
-                                </label>
-                                <unit-role-picker id="roleInput" value.two-way="role" maximum="1"></unit-role-picker>
-                            </div>
-                        </form>
-                    </fieldset>
-                    <fieldset>
-                        <legend>Output</legend>
-                        <div class="_alignCenter">
-                            <unit-display size="large" model.bind="genericBuilder" selected.delegate="eventClicked($event)">
-                            </unit-display>
-                        </div>
-                    </fieldset>
-                </div>
+                        </fieldset>
+                    </div>
+                </form>
             </div>
         </ux-dialog-body>
         <ux-dialog-footer>
