Updating team search and stage parsers.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -71,8 +71,8 @@
                             </div>
                             <div class="form-group">
                                 <label for="eventShipCheckbox">
-                                    <input id="eventShipCheckbox" type="checkbox" checked.bind="eventShips" />
-                                    <span class="-label-body"> Retired Event Ships</span>
+                                    <input id="eventShipCheckbox" type="checkbox" checked.bind="excludeEventShips" />
+                                    <span class="-label-body"> Exclude Event Ships</span>
                                 </label>
                             </div>
                             <div class="form-group">
