--- a/Source/TreasureGuide.Web/src/custom-elements/displays/schedule-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/schedule-display.html
@@ -3,15 +3,13 @@
     <loading-area if.bind="scheduleLoading"></loading-area>
     <div if.bind="!scheduleLoading">
         <label class="schedule-toggle" for="globalCheckbox">
-            <input id="globalCheckbox" type="checkbox" checked.bind="globalSchedule" />
+            <!--  <input id="globalCheckbox" type="checkbox" checked.bind="globalSchedule" />-->
             <i class="fa fa-fw fa-globe"></i>
         </label>
         <schedule-bar schedule.bind="currentSchedule" global.bind="globalSchedule"></schedule-bar>
         <schedule-bar schedule.bind="upcomingSchedule" upcoming="true" global.bind="globalSchedule"></schedule-bar>
         <span class="schedule-credit">
             Powered by
-            <a href="https://optc-agenda.github.io/" target="_blank">OPTC-Agenda</a>
-            and
             <a href="https://lukforce.bitbucket.io/optc-cal/" target="_blank">OPTC-Cal</a>
         </span>
     </div>
