--- a/Source/TreasureGuide.Web/src/custom-elements/displays/flag-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/flag-display.html
@@ -20,5 +20,10 @@
             <i class="fa fa-video-camera fa-stack-1x"></i>
             <i class="fa fa-circle-o fa-stack-2x"></i>
         </div>
+        <div class="fa-stack" if.bind="team.comments > 0" title="Has Comments">
+            <i class="fa fa-circle fa-stack-2x _infoLightText"></i>
+            <i class="fa fa-comment fa-stack-1x"></i>
+            <i class="fa fa-circle-o fa-stack-2x"></i>
+        </div>
     </div>
 </template>
