Schedule no longer divides today and upcoming, just has all the things now.

--- a/Source/TreasureGuide.Web/src/custom-elements/displays/schedule-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/schedule-display.html
@@ -6,8 +6,7 @@
             <!--  <input id="globalCheckbox" type="checkbox" checked.bind="globalSchedule" />-->
             <i class="fa fa-fw fa-globe"></i>
         </label>
-        <schedule-bar schedule.bind="currentSchedule" global.bind="globalSchedule"></schedule-bar>
-        <schedule-bar schedule.bind="upcomingSchedule" upcoming="true" global.bind="globalSchedule"></schedule-bar>
+        <schedule-bar schedule.bind="schedule" global.bind="globalSchedule"></schedule-bar>
         <span class="schedule-credit">
             Powered by
             <a href="https://lukforce.bitbucket.io/optc-cal/" target="_blank">OPTC-Cal</a>
