--- a/Source/TreasureGuide.Web/src/custom-elements/comments/team-comments.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/comments/team-comments.html
@@ -17,35 +17,11 @@
                 <search-pager search-model.bind="searchModel" empty-message="No comments yet."></search-pager>
             </div>
             <div class="row comment-collection" if.bind="comments.length > 0">
-                <div repeat.for="comment of comments" class="row comment" class.bind="(comment.reported ? 'reported ' : '') + (comment.deleted ? 'deleted' : '')">
-                    <div class="comment-header">
-                        <div class="col m6">
-                            <a route-href="route: profile; params.bind: { id: submittedByName }">
-                                <user-display name.bind="comment.submittedByName" unit-id.bind="comment.submittedByUnitId" donor.bind="comment.submittedByIsDonor"></user-display>
-                            </a>
-                            on ${comment.editedDate | dateTimeFormat}
-                            <a href="#" if.bind="comment.canEdit" auth-req click.delegate="edit(comment)" title="Edit">
-                                <i class="fa fa-fw fa-pencil"></i>
-                            </a>
-                            <a href="#" if.bind="comment.canEdit" auth-req click.delegate="delete(comment)" title="Delete">
-                                <i class="fa fa-fw fa-trash-o"></i>
-                            </a>
-                            <a href="#" if.bind="comment.reported" auth-req="Moderator, Administrator" click.delegate="acknowledge(comment)" title="Clear Reports">
-                                <i class="fa fa-fw fa-exclamation"></i>
-                            </a>
-                        </div>
-                        <div class="col m6 _alignRight">
-                            <comment-score-display team-comment-id.bind="comment.id" score.bind="comment.score" my-vote.two-way="comment.myVote" reported.two-way="comment.reported" votable="true"></comment-score-display>
-                        </div>
-                    </div>
-                    <div class="col m12">
-                        <markdown value.bind="comment.text"></markdown>
-                    </div>
-                </div>
+                <comment-collection comments.bind="comments" team.bind="team"></comment-collection>
             </div>
-            <div class="row">
-                <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
-            </div>
+        </div>
+        <div class="row">
+            <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
         </div>
     </div>
 </template>
