--- a/Source/TreasureGuide.Web/src/custom-elements/team-box.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-box.html
@@ -28,7 +28,7 @@
             <div class="col m12 submission _alignRight">
                 -
                 <user-display name.bind="team.submittedByName" unit-id.bind="team.submittedByUnitId" donor.bind="team.submittedByIsDonor"></user-display>
-                ${team.editedDate | ageFormat}
+                ${team.submittedDate | ageFormat}
             </div>
         </div>
     </a>
